--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,11 @@ body {
 .callout-container {
     height: 100vh;
 
-  background: url("../images/whiskey-background.jpg") no-repeat bottom right fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+    background: url('../images/whiskey-background.jpg') no-repeat bottom right fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     
     display: flex;
     align-items: center;
